--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,8 @@
         <script src="{% static 'js/csrf.js' %}"></script>
         <script src="{% static 'js/objective.js' %}"></script>
         <script src="{% static 'js/obstacle.js' %}"></script>
+        <script src="{% static 'js/condition.js' %}"></script>
+        <!-- <script src="{% static 'js/permission.js' %}"></script> -->
         
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
