--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,13 @@
         <script src="{% static 'js/objective.js' %}"></script>
         <script src="{% static 'js/obstacle.js' %}"></script>
         <script src="{% static 'js/condition.js' %}"></script>
+        <script src="{% static 'js/contextconstraint.js' %}"></script>
+<!--        <script src="{% static 'js/scenario.js' %}"></script>
+        <script src="{% static 'js/permission.js' %}"></script>
+        <script src="{% static 'js/task.js' %}"></script>
+        <script src="{% static 'js/role.js' %}"></script>
+        <script src="{% static 'js/workprofile.js' %}"></script>
+        <script src="{% static 'js/step.js' %}"></script>
         <!-- <script src="{% static 'js/permission.js' %}"></script> -->
         
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
