adding permission changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -901,6 +901,7 @@ var url_edit_condition = "{% url 'edit_condition' %}"
 var url_delete_constraint = "{% url 'delete_constraint' %}"
 var url_edit_constraint = "{% url 'edit_constraint' %}"
 
+var url_delete_permission = "{% url 'delete_permission' %}"
 
 var url_get_conditions = "{% url 'get_conditions' %}"
 
